--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head> 
     <meta charset="UTF-8">
-    <title>Your Name Here!</title> 
+    <title>Matthew Mosinski!</title> 
     <link rel="stylesheet" href="style.css">
     <title>Test</title>
   </head>
